ghost/admin/app/styles/layouts/settings.css
/* ... */
.gh-email-debug-batch-col-details .download-icon path {
    stroke: var(--midgrey);
}

.gh-email-debug-batch-col-details .detailtext {
    flex-grow: 1;
}

.gh-email-debug-settings {
    font-size: 1.3rem;
    margin: 12px 0 20px;
}

.gh-email-debug-settings .gh-type-number {
    font-variant-numeric: tabular-nums;
}

.gh-email-debug-settings hr {
    margin: 8px 0;
    border-top-color: var(--whitegrey);
}

.gh-email-debug-settings tr td {
    font-weight: 500;
    padding: 6px 0;
}

.gh-email-debug-settings tr td:first-of-type {
    width: 30%;
    white-space: nowrap;
    color: var(--midgrey);
}

.gh-email-debug-settings-icon svg {
    width: 14px;
    height: 14px;
}

.gh-email-debug-settings-icon .check {
    width: 18px;
    height: 18px;
}

.gh-email-debug-settings-icon .check path {
    stroke: var(--green);
    stroke-width: 2.5;
}

.gh-email-debug-settings-icon .x path {
    stroke: var(--midgrey);
}

.gh-email-debug-schedule-analytics {
    display: flex;
    align-items: center;
    width: max-content;
    margin: .8rem 0 0;
    color: var(--green-d1);
}

.gh-email-debug-schedule-analytics svg {
    width: 1rem;
    height: 1rem;
    margin-right: 6px;
}

.gh-email-debug-schedule-analytics svg g {
    stroke: var(--green-d1);
    stroke-width: 3px;
}

.gh-email-debug-empty-list {
    margin: 120px 40px;
    text-align: center;
    font-size: 1.3rem;
    color: var(--midgrey);
}

.gh-email-debug-readmore-error {
    display: inline-flex;
    width: 100%;
}

.gh-email-debug-readmore-error label {
    order: 3;
    cursor: pointer;
}

.gh-email-debug-readmore-error .toggle-checkbox {
    display: none;
}

.gh-email-debug-readmore-error span {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
    overflow: hidden;
    color: color-mod(var(--red) l(-2%));
    word-break: break-all;
}

.gh-email-debug-readmore-error .toggle-checkbox:checked ~ span {
    display: block;
    -webkit-box-orient: unset;
    -webkit-line-clamp: unset;
    overflow: unset;
    word-break: break-word;
}

.gh-email-debug-readmore-error .toggle-checkbox:checked ~ label {
    display: none !important;
}

.gh-email-debug-readmore-error svg {
    width: 12px;
    height: 12px;
    margin: 0;
}

.gh-email-debug-readmore-error svg circle {
    fill: var(--midgrey);
}

.gh-email-debug-readmore-error label {
    display: flex;
    align-items: center;
    padding: 0 4px;
    border-radius: 2px;
    height: 14px;
    margin-top: 3px;
    margin-left: 8px;
    background: var(--whitegrey);
}

/* Announcement bar */

.gh-announcement-editor {
    height: 120px;
    padding: 6px 12px 6px 12px;
    border: 1px solid var(--whitegrey-d1);
    background: var(--white);
    border-radius: 4px;
    word-break: break-word;
}

.gh-announcement-editor .koenig-lexical *,
.gh-announcement-editor .koenig-lexical-editor-input-placeholder {
    font-family: var(--font-family) !important;
    font-size: 1.4rem !important;
    line-height: 1.5em !important;
}

.gh-announcement-editor .koenig-lexical p,
.gh-announcement-editor .koenig-lexical .kg-prose {
    height: 108px;
    color: var(--darkgrey);
    font-size: 1.4rem !important;
    line-height: 1.5em !important;
}

.gh-announcement-editor .koenig-lexical a {
    display: inline;
    padding: 0;
    height: auto;
}

