Dark mode input field background fix
no refs.

- The background color of the announcement bar input field and its container's background color was slightly off in dark mode

--- a/ghost/admin/app/styles/layouts/settings.css
+++ b/ghost/admin/app/styles/layouts/settings.css
@@ -3716,6 +3716,10 @@ p.theme-validation-details {
     word-break: break-word;
 }
 
+.gh-announcement-editor.dark {
+    background: #15171A;
+}
+
 .gh-announcement-editor .koenig-lexical *,
 .gh-announcement-editor .koenig-lexical-editor-input-placeholder {
     font-family: var(--font-family) !important;
